<resources>
    <string name="app_name">发发发</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur magna tortor, semper eu feugiat eu, vehicula vitae lacus.</string>
    <string name="recyclerview_fab_example">RecyclerView FAB example</string>
    <string name="floating_action_menu">Floating Action Menu</string>
    <string name="lorem_ipsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed ultricies risus. Integer nisi orci, lacinia sit amet mi in, mollis scelerisque purus. Nunc risus ligula, maximus eu orci a, facilisis dictum velit. Proin nec laoreet magna. Nulla ut sagittis lorem. Morbi id enim fermentum, semper diam et, tempus leo. Aliquam vel congue orci. Suspendisse potenti. Curabitur finibus diam augue, vel bibendum sapien ultrices non.</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation close</string>
	<string name="bid">bid</string>
    <string name="_0">0</string>
    <string name="liveroom">liveRoom</string>
    <string name="qq">QQ</string>
    <string name="name">name</string>
    <string name="reply">回复</string>
    <string name="not_reply">不回复</string>
    <string name="add">添加</string>
    <string name="repeat">复读</string>
    <string name="setu">色图</string>
    <string name="pohai">迫害图</string>
    <string name="dic">词库</string>
    <string name="bilibili">屑站链接</string>
    <string name="cuigeng">催更</string>
    <string name="soutu">搜图</string>
    <string name="sleep">夏眠</string>
    <string name="roll">roll</string>
    <string name="barcode">二维码</string>
    <string name="kuiping">窥屏检测</string>
    <string name="cqcode">CQ码</string>
    <string name="nvzhuang">女装</string>
    <string name="moshenfusong">膜神复诵</string>
    <string name="delete_motu">撤回膜图</string>
    <string name="ban_repeater">禁言复读机</string>
    <string name="eluosi">俄罗斯轮盘</string>
    <string name="all">全部</string>
    <string name="edit_dic">编辑词库</string>
    <string name="offBan">不禁言复读机</string>
    <string name="group_config">群配置</string>
    <string name="not_reply_qq">不回复的QQ</string>
    <string name="not_reply_word">不回复的字</string>
    <string name="plane_player">飞机佬名单</string>
    <string name="master">Master</string>
    <string name="admin">Admin</string>
    <string name="group_auto_allow">自动同意进群</string>
    <string name="black_qq">黑名单QQ</string>
    <string name="black_group">黑名单群</string>
    <string name="tiplive">提醒直播</string>
    <string name="tipvideo">提醒视频和文章</string>
    <string name="tipaction">提醒动态</string>
    <string name="settings">设置</string>
</resources>
