<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/group_config"
            android:icon="@drawable/ic_menu"
            android:title="@string/group_config" />
        <item
            android:id="@+id/qq_not_reply"
            android:icon="@drawable/ic_menu"
            android:title="@string/not_reply_qq" />
        <item
            android:id="@+id/word_not_reply"
            android:icon="@drawable/ic_menu"
            android:title="@string/not_reply_word" />
        <item
            android:id="@+id/accounts"
            android:icon="@drawable/ic_menu"
            android:title="@string/plane_player" />
        <item
            android:id="@+id/master"
            android:icon="@drawable/ic_menu"
            android:title="@string/master" />
        <item
            android:id="@+id/admin"
            android:icon="@drawable/ic_menu"
            android:title="@string/admin" />
        <item
            android:id="@+id/allow"
            android:icon="@drawable/ic_menu"
            android:title="@string/group_auto_allow" />
        <item
            android:id="@+id/blackqq"
            android:icon="@drawable/ic_menu"
            android:title="@string/black_qq" />
        <item
            android:id="@+id/blackgroup"
            android:icon="@drawable/ic_menu"
            android:title="@string/black_group" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu"
            android:title="@string/settings" />

        <!--
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_nav_item"
            android:title="Home" />
        <item
            android:id="@+id/menus"
            android:icon="@drawable/ic_nav_item"
            android:title="Menus" />
        <item
            android:id="@+id/progress"
            android:icon="@drawable/ic_nav_item"
            android:title="Progress" />-->
    </group>

</menu>
