<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/edit_viewEditText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq" />

        <EditText
            android:id="@+id/edit_viewEditText_qq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bid" />

        <EditText
            android:id="@+id/edit_viewEditText_bid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:text="@string/_0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liveroom" />

        <EditText
            android:id="@+id/edit_viewEditText_b_live_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0"
            android:text="@string/_0" />
    </LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="群内提示" />

        <EditText
            android:id="@+id/edit_viewEditText_tipInGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/edit_viewCheckbox_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiplive" />

    <CheckBox
        android:id="@+id/edit_viewCheckbox_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipvideo" />

    <CheckBox
        android:id="@+id/edit_viewCheckbox_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipaction" />

	
</LinearLayout>

